# openrelik-worker-kustoingest

./: Dockerfile  README.md  openrelik.yaml  pyproject.toml
src/: app.py  kustoingest.py  mftecmd.py  utils.py
